Finished implementation of the minigame, still to be perfectionated